# nufd

./: .gitignore  CMakeLists.txt  README.md  example.cpp  nufd.cpp  nufd.h
nufd_tests/: CMakeLists.txt
nufd_tests/uniform_grid_tests/: CMakeLists.txt  uniformGrid.cpp
src/: CMakeLists.txt  nufd.cpp  nufd.h
tests/: uniformGrid.cpp
